fix z-index on drawer to be higher than nav

--- a/client/static_src/styles/Work.less
+++ b/client/static_src/styles/Work.less
@@ -13,6 +13,7 @@
 }
 
 .work-drawer {
+  z-index: 3000;
   padding: 1rem;
   width: 100vw !important;
   margin-top: -1rem;
